Clean folder structure

--- a/projects/projects.css
+++ b/projects/projects.css
@@ -109,10 +109,10 @@ h1 {
   }
 
   .layer1 {
-    background-image: url('images/waves/darkwhite.svg');
+    background-image: url('../images/waves/darkwhite.svg');
   }
   .layer2 {
-    background-image: url('images/layer3.svg');
+    background-image: url('../images/layer3.svg');
   }
 
   .flip {
