--- a/blog/blog.css
+++ b/blog/blog.css
@@ -104,10 +104,10 @@
   }
 
   .layer1 {
-    background-image: url('images/waves/darkwhite.svg');
+    background-image: url('../images/waves/darkwhite.svg');
   }
   .layer2 {
-    background-image: url('images/layer3.svg');
+    background-image: url('../images/layer3.svg');
   }
 
   .flip {
@@ -135,7 +135,7 @@
     border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
 }
   .bg-blob-blog{
-    background-image: url('images/haikei/hiblog.svg');
+    background-image: url('../images/haikei/hiblog.svg');
   }
   @media screen and (max-width:1000px){
     .bg-blob-blog{background-image: none;}
