--- a/about/index.css
+++ b/about/index.css
@@ -33,8 +33,8 @@
 }
       /* SVG background image via https://haikei.app/ */
     
-      .spacer {
-        aspect-ratio: 960/80;
+      .placeholder {
+        aspect-ratio: 960/60;
         width: 100%;
         background-repeat: no-repeat;
         background-position: center;
@@ -50,8 +50,8 @@
       .redwave2 {
         background-image: url('/images/waves/redwhite.svg')
       }
-      .whiterote {
-        background-image: url('/images/whiterote.svg')
+      .whitepurple {
+        background-image: url('/images/waves/whitepurple.svg')
       }
       .whitedarke{
         background-image: url('/images/whitedarke.svg')
@@ -61,6 +61,9 @@
       }
       .darkeblack{
         background-image: url('/images/haikei/darkeblack.svg')
+      }
+      .purplewhite {
+        background-image: url('/images/waves/purplewhite1.svg');
       }
     
       .flip {
