--- a/blog/blog_entries/bloby.css
+++ b/blog/blog_entries/bloby.css
@@ -14,6 +14,20 @@
     border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
     
 }
+.vc-image-2{
+    border-radius: 100% 100% 100% 100% / 100% 100% 100% 100%;
+}
+#oxford_vs_etf {
+  position: relative;
+  left: 50%;
+  top: 50%;
+  width: 300px;
+  height: 300px;
+  transform: translate(-50%, -50%) rotate(var(--r, 0deg));
+  background-image: url('/images/thumbnail/oxford_vs_etf.png');
+  background-position: center;
+  background-size: 360px auto;
+}
 #meowth {
   position: relative;
   left: 50%;
