Mostly done with part 1

--- a/blog/blog.css
+++ b/blog/blog.css
@@ -111,8 +111,8 @@
         background-size: cover;
       }
       
-  .homedarkwhite {
-        background-image: url('/images/waves/homedarkwhite.svg')
+  .dark-white {
+        background-image: url('/images/waves/dark-white.svg')
       }
 
   .layer1 {
