--- a/blog/blog_entries/bloby.css
+++ b/blog/blog_entries/bloby.css
@@ -16,6 +16,7 @@
 }
 .vc-image-2{
     border-radius: 100% 100% 100% 100% / 100% 100% 100% 100%;
+    overflow: hidden;
 }
 #oxford_vs_etf {
   position: relative;
