--- a/blog/blog_entries/oxford_vs_etf_2/modal.css
+++ b/blog/blog_entries/oxford_vs_etf_2/modal.css
@@ -5,6 +5,8 @@
   padding-top: 60px;
   left: 0;
   top: 0;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
   overflow: auto;
@@ -12,18 +14,29 @@
   text-align: center;
 }
 
-.lightbox-content {
-  margin: auto;
+.lightbox-center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); /* Center horizontally and vertically */
   max-width: 90%;
+  max-height: 90%;
+}
+
+.lightbox-content {
+  max-width: 100%;
   max-height: 80vh;
   border-radius: 8px;
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.6);
+  display: block;
+  margin: 0 auto;
 }
 
 .lightbox-caption {
   color: #ccc;
   margin-top: 15px;
   font-size: 16px;
+  text-align: center;
 }
 
 .close-button {
