--- a/about/index.css
+++ b/about/index.css
@@ -8,7 +8,6 @@
 }
 
 .console-container {
- 
   font-family:Khula;
   font-size:4em;
   text-align:left;
@@ -41,40 +40,6 @@
         background-size: cover;
       }
     
-      .layer1 {
-        background-image: url('/images/waves/redwhite.svg');
-      }
-      .layer2 {
-        background-image: url('/images/layer3.svg');
-      }
-      .redwave2 {
-        background-image: url('/images/waves/redwhite.svg')
-      }
-      .whitepurple {
-        background-image: url('/images/waves/whitepurple.svg')
-      }
-      /*.whitedarke{
-        background-image: url('/images/whitedarke.svg')
-      }*/
-      .whitedarke{
-        background-image: url('/images/waves/darkeblackwhite.svg');
-      }
-
-      .whiteblack{
-        background-image: url('/images/waves/whiteblack.svg')
-      }
-      .darkeblack{
-        background-image: url('/images/haikei/darkeblack.svg')
-      }
-      .purplewhite {
-        background-image: url('/images/waves/purplewhite.svg');
-      }
-      .homedarkwhite {
-        background-image: url('/images/waves/homedarkwhite.svg')
-      }
-      .aboutwhitedark {
-        background-image: url('/images/waves/aboutwhitedark.svg')
-      }
       .flip {
         transform: rotate(180deg);
       }
@@ -137,180 +102,61 @@
   font-family: S
 }
 
+.about-section {
+  width: 100vw;                       /* span full screen width */
+  min-height: calc(90vh);      /* full screen minus navbar height */
+  padding: 2rem;
+  background-size: cover;              /* ensure bg-blobs fills */
+  background-position: center;
+  gap: 2rem;                           /* space between image and text */
+}
 
+/* .about-section .image-col,
+.about-section .text-col {
+  max-width: 500px;  
+  flex: 0 1 auto;   
+} */
 
+@media (max-width: 992px) {
+  .about-section {
+    flex-direction: column;           /* stack on small screens */
+    text-align: center;
+  }
+}
 
-.site-footer
-{
-  background-color:#000000;
-  padding:45px 0 20px;
-  font-size:15px;
-  line-height:24px;
-  color:#737373;
-}
-.site-footer hr
-{
-  border-top-color:#bbb;
-  opacity:0.5
-}
-.site-footer hr.small
-{
-  margin:20px 0
-}
-.site-footer h6
-{
-  color:#fff;
-  font-size:16px;
-  text-transform: uppercase;
-  letter-spacing:2px
-}
-.site-footer a
-{
-  color:#737373;
-}
-.site-footer a:hover
-{
-  color:#3366cc;
-  text-decoration:none;
-}
-.footer-links
-{
-  padding-left:0;
-  list-style:none
-}
-.footer-links li
-{
-  display:block
-}
-.footer-links a
-{
-  color:#737373
-}
-.footer-links a:active,.footer-links a:focus,.footer-links a:hover
-{
-  color:#3366cc;
-  text-decoration:none;
-}
-.footer-links.inline li
-{
-  display:inline-block
-}
-.site-footer .social-icons
-{
-  text-align:right
-}
-.site-footer .social-icons a
-{
-  width:40px;
-  height:40px;
-  line-height:40px;
-  margin-left:6px;
-  margin-right:0;
-  border-radius:100%;
-  background-color:#212429
-}
-.copyright-text
-{
-  margin:0
-}
-@media (max-width:991px)
-{
-  .site-footer [class^=col-]
-  {
-    margin-bottom:30px
+/* Mobile optimizations */
+@media (max-width: 768px) {
+  .about-section {
+    
+    flex-direction: column !important; /* stack image + text */
+    text-align: left;
+    padding: 1.5rem 1rem;
+    gap: 1.25rem;
   }
-}
-@media (max-width:767px)
-{
-  .site-footer
-  {
-    padding-bottom:0
+
+  .about-section .text-col {
+    padding: 0; /* remove side padding */
   }
-  .site-footer .copyright-text,.site-footer .social-icons
-  {
-    text-align:center
+
+  .about-section img {
+    max-width: 150px;
+    height: auto;
+    margin-bottom: 1rem;
   }
-}
-.social-icons
-{
-  padding-left:0;
-  margin-bottom:0;
-  list-style:none
-}
-.social-icons li
-{
-  display:inline-block;
-  margin-bottom:4px
-}
-.social-icons li.title
-{
-  margin-right:15px;
-  text-transform:uppercase;
-  color:#96a2b2;
-  font-weight:700;
-  font-size:13px
-}
-.social-icons a{
-  background-color:#eceeef;
-  color:#818a91;
-  font-size:16px;
-  display:inline-block;
-  line-height:44px;
-  width:44px;
-  height:44px;
-  text-align:center;
-  margin-right:8px;
-  border-radius:100%;
-  -webkit-transition:all .2s linear;
-  -o-transition:all .2s linear;
-  transition:all .2s linear
-}
-.social-icons a:active,.social-icons a:focus,.social-icons a:hover
-{
-  color:#fff;
-  background-color:#29aafe
-}
-.social-icons.size-sm a
-{
-  line-height:34px;
-  height:34px;
-  width:34px;
-  font-size:14px
-}
-.social-icons a.facebook:hover
-{
-  background-color:#3b5998
-}
-.social-icons a.twitter:hover
-{
-  background-color:#00aced
-}
-.social-icons a.linkedin:hover
-{
-  background-color:#007bb6
-}
-.social-icons a.dribbble:hover
-{
-  background-color:#ea4c89
-}
-@media (max-width:767px)
-{
-  .social-icons li.title
-  {
-    display:block;
-    margin-right:0;
-    font-weight:600
+
+  .about-section h2 {
+    font-size: clamp(1.25rem, 4vw, 2rem);   /* ~24px */
+    line-height: 1.3;
   }
-}
-.cruvycurv{
-  border-radius: 40% 60% 55% 70%;
-}
-.delux-centering{
-  display: flex;
-  justify-content: center;
-}
-@media screen and (max-width: 1000px){
-  .semi-lead{
-    font-size: 8px;
+
+  .about-section p {
+    font-size: clamp(0.9rem, 2vw, 1.1rem) !important;
+    line-height: 1.5;
+    max-width: 35ch;
+  }
+
+  .about-section figcaption {
+    font-size: 0.9rem;
+    margin-bottom: 0.5rem;
   }
 }
