--- a/blog/blog.css
+++ b/blog/blog.css
@@ -128,7 +128,7 @@
 
   /* Blobs SVG background image via https://haikei.app/ */
 
-  .blob-motion {
+  /* .blob-motion {
     position: absolute;
     transform: translateY(-20%);
     z-index: 0;
@@ -145,19 +145,19 @@
 
   .vc-image-1{
     border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
-}
+} */
   .bg-blob-blog{
     background-image: url('../images/haikei/hiblog.svg');
   }
   @media screen and (max-width:1000px){
     .bg-blob-blog{background-image: none;}
   }
-  .work-in-progress{
+  /* .work-in-progress{
     border-style: solid;
     border-color: #FFCCCB;
   }
-  
-  .blob {
+   */
+  /* .blob {
     position: relative;
     width: 300px;
     height: 300px;
@@ -171,8 +171,8 @@
   .blob, .image {
     transition-property: border-radius, transform;
     transition-duration: 1s, 1s;
-  }
-  #image {
+  } */
+  /* #image {
     position: relative;
     left: 50%;
     top: 50%;
@@ -182,7 +182,7 @@
     background-image: url('https://wallpapercave.com/wp/wp4047726.jpg');
     background-position: center;
     background-size: 340px auto;
-  }
+  } */
   @media screen and (max-width: 1000px) {
     #image {position: relative;
       left: 50%;
