--- a/contact/contact.css
+++ b/contact/contact.css
@@ -1,54 +1,28 @@
-/*
- * Globals
- */
 
 
-/* Custom default button */
-.btn-secondary,
-.btn-secondary:hover,
-.btn-secondary:focus {
-  color: #333;
-  text-shadow: none; /* Prevent inheritance from `body` */
+/* Icon size management */
+/* Tablet */
+@media (max-width: 992px) {
+  .fa-5x {
+    font-size: 3.5em !important;
+  }
 }
 
-
-/*
- * Base structure
- */
-
-body {
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+/* Mobile */
+@media (max-width: 576px) {
+  .fa-5x {
+    font-size: 3em !important;
+  }
 }
 
-.cover-container {
-  max-width: 42em;
+@media (max-width: 576px) {
+  .row.mt-4.justify-content-center {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.25rem;
+  }
+  .col-md-2 {
+    flex: unset;
+    max-width: unset;
+  }
 }
-
-
-/*
- * Header
- */
-
-.nav-masthead .nav-link {
-  padding: .25rem 0;
-  font-weight: 700;
-  color: rgba(255, 255, 255, .5);
-  background-color: transparent;
-  border-bottom: .25rem solid transparent;
-}
-
-.nav-masthead .nav-link:hover,
-.nav-masthead .nav-link:focus {
-  border-bottom-color: rgba(255, 255, 255, .25);
-}
-
-.nav-masthead .nav-link + .nav-link {
-  margin-left: 1rem;
-}
-
-.nav-masthead .active {
-  color: #fff;
-  border-bottom-color: #fff;
-}
-
