Remove card in blog

--- a/blog/blog.css
+++ b/blog/blog.css
@@ -146,9 +146,11 @@
   .vc-image-1{
     border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
 } */
-  .bg-blob-blog{
-    background-image: url('../images/haikei/hiblog.svg');
-  }
+
+  .bg-blob-blog {
+  background: url('../images/haikei/hiblog.svg'); no-repeat center center;
+  background-size: cover;  /* stretches it to fill */
+}
   @media screen and (max-width:1000px){
     .bg-blob-blog{background-image: none;}
   }
